--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>admin-panel</title>
   </head>
   <body dir="rtl">
+    <header class="header">
+      <section>
+        <span class="d-inline d-md-none"
+          ><i class="fas fa-toggle-off"></i
+        ></span>
+        <span class="d-none d-md-inline"><i class="fas fa-toggle-on"></i></span>
+        <span><img src="assets/images/logo.png" alt="" /></span>
+        <span class="d-md-none"><i class="fas fa-ellipsis-h"></i></span>
+      </section>
+      <section></section>
+    </header>
+
     <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
