finish design header

--- a/index.html
+++ b/index.html
@@ -104,6 +104,222 @@
                 </ul>
               </section>
             </span>
+
+            <span class="ml-2 ml-md-4 position-relative">
+              <span class="pointer">
+                <i class="far fa-comment-alt"
+                  ><sup class="badge badge-danger">3</sup></i
+                >
+
+                <section class="header-comment">
+                  <section class="border-bottom px-4">
+                    <input
+                      type="text"
+                      class="form-control form-control-sm my-4"
+                      placeholder="جستجو..."
+                    />
+                  </section>
+
+                  <section class="header-comment-wrapper">
+                    <ul class="list-group rounded px-0">
+                      <li class="list-group-item list-group-item-action">
+                        <section class="media">
+                          <img
+                            src="assets/images/avatar-2.jpg"
+                            alt="avatar"
+                            class="notification-img"
+                          />
+                          <section class="media-body pr-1">
+                            <section class="d-flex justify-content-between">
+                              <h5 class="comment-user">محمد هاشمی</h5>
+                              <span
+                                ><i
+                                  class="fas fa-circle text-success comment-user-status"
+                                ></i
+                              ></span>
+                            </section>
+                          </section>
+                        </section>
+                      </li>
+                      <li class="list-group-item list-group-item-action">
+                        <section class="media">
+                          <img
+                            src="assets/images/avatar-2.jpg"
+                            alt="avatar"
+                            class="notification-img"
+                          />
+                          <section class="media-body pr-1">
+                            <section class="d-flex justify-content-between">
+                              <h5 class="comment-user">محمد هاشمی</h5>
+                              <span
+                                ><i
+                                  class="fas fa-circle text-success comment-user-status"
+                                ></i
+                              ></span>
+                            </section>
+                          </section>
+                        </section>
+                      </li>
+                      <li class="list-group-item list-group-item-action">
+                        <section class="media">
+                          <img
+                            src="assets/images/avatar-2.jpg"
+                            alt="avatar"
+                            class="notification-img"
+                          />
+                          <section class="media-body pr-1">
+                            <section class="d-flex justify-content-between">
+                              <h5 class="comment-user">محمد هاشمی</h5>
+                              <span
+                                ><i
+                                  class="fas fa-circle text-success comment-user-status"
+                                ></i
+                              ></span>
+                            </section>
+                          </section>
+                        </section>
+                      </li>
+                      <li class="list-group-item list-group-item-action">
+                        <section class="media">
+                          <img
+                            src="assets/images/avatar-2.jpg"
+                            alt="avatar"
+                            class="notification-img"
+                          />
+                          <section class="media-body pr-1">
+                            <section class="d-flex justify-content-between">
+                              <h5 class="comment-user">محمد هاشمی</h5>
+                              <span
+                                ><i
+                                  class="fas fa-circle text-success comment-user-status"
+                                ></i
+                              ></span>
+                            </section>
+                          </section>
+                        </section>
+                      </li>
+                      <li class="list-group-item list-group-item-action">
+                        <section class="media">
+                          <img
+                            src="assets/images/avatar-2.jpg"
+                            alt="avatar"
+                            class="notification-img"
+                          />
+                          <section class="media-body pr-1">
+                            <section class="d-flex justify-content-between">
+                              <h5 class="comment-user">محمد هاشمی</h5>
+                              <span
+                                ><i
+                                  class="fas fa-circle text-success comment-user-status"
+                                ></i
+                              ></span>
+                            </section>
+                          </section>
+                        </section>
+                      </li>
+                      <li class="list-group-item list-group-item-action">
+                        <section class="media">
+                          <img
+                            src="assets/images/avatar-2.jpg"
+                            alt="avatar"
+                            class="notification-img"
+                          />
+                          <section class="media-body pr-1">
+                            <section class="d-flex justify-content-between">
+                              <h5 class="comment-user">محمد هاشمی</h5>
+                              <span
+                                ><i
+                                  class="fas fa-circle text-success comment-user-status"
+                                ></i
+                              ></span>
+                            </section>
+                          </section>
+                        </section>
+                      </li>
+                      <li class="list-group-item list-group-item-action">
+                        <section class="media">
+                          <img
+                            src="assets/images/avatar-2.jpg"
+                            alt="avatar"
+                            class="notification-img"
+                          />
+                          <section class="media-body pr-1">
+                            <section class="d-flex justify-content-between">
+                              <h5 class="comment-user">محمد هاشمی</h5>
+                              <span
+                                ><i
+                                  class="fas fa-circle text-success comment-user-status"
+                                ></i
+                              ></span>
+                            </section>
+                          </section>
+                        </section>
+                      </li>
+                      <li class="list-group-item list-group-item-action">
+                        <section class="media">
+                          <img
+                            src="assets/images/avatar-2.jpg"
+                            alt="avatar"
+                            class="notification-img"
+                          />
+                          <section class="media-body pr-1">
+                            <section class="d-flex justify-content-between">
+                              <h5 class="comment-user">محمد هاشمی</h5>
+                              <span
+                                ><i
+                                  class="fas fa-circle text-success comment-user-status"
+                                ></i
+                              ></span>
+                            </section>
+                          </section>
+                        </section>
+                      </li>
+                    </ul>
+                  </section>
+                </section>
+              </span>
+            </span>
+
+            <span class="ml-3 ml-md-5 position-relative">
+              <span class="pointer">
+                <img
+                  class="header-avatar"
+                  src="assets/images/avatar-2.jpg"
+                  alt="avatar"
+                />
+                <span class="header-username">کامران محمدی</span>
+                <i class="fas fa-angle-down"></i>
+              </span>
+              <section class="header-profile rounded">
+                <section class="list-group rounded">
+                  <a
+                    href="#"
+                    class="list-group-item list-group-item-action header-profile-link"
+                    ><i class="fas fa-cog"></i>تنظیمات</a
+                  >
+                  <a
+                    href="#"
+                    class="list-group-item list-group-item-action header-profile-link"
+                    ><i class="fas fa-user"></i>کاربر</a
+                  >
+                  <a
+                    href="#"
+                    class="list-group-item list-group-item-action header-profile-link"
+                    ><i class="far fa-envelope"></i>پیام ها</a
+                  >
+                  <a
+                    href="#"
+                    class="list-group-item list-group-item-action header-profile-link"
+                    ><i class="fas fa-lock"></i>قفل صفحه</a
+                  >
+                  <a
+                    href="#"
+                    class="list-group-item list-group-item-action header-profile-link"
+                    ><i class="fas fa-sign-out-alt"></i>خروج</a
+                  >
+                </section>
+              </section>
+            </span>
           </section>
         </section>
       </section>
