--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
               <i class="fas fa-expand"></i>
             </span>
           </section>
-
           <section>
             <span class="ml-2 ml-md-4 position-relative">
               <span class="pointer">
@@ -324,6 +323,70 @@
         </section>
       </section>
     </header>
+
+    <section class="body-container">
+      <aside>
+        <section class="sidebar-container">
+          <section class="sidebar-wrapper">
+            <a href="#" class="sidebar-link">
+              <i class="fas fa-home"></i>
+              <span>خانه</span>
+            </a>
+
+            <section class="sidebar-part-title">بخش محتوی</section>
+
+            <a href="#" class="sidebar-link">
+              <i class="fas fa-bars"></i>
+              <span>دسته ها</span>
+            </a>
+
+            <section class="sidebar-group-link">
+              <section class="sidebar-dropdown-toggle">
+                <i class="fas fa-chart-bar"></i>
+                <span>نوشته ها</span>
+                <i class="fas fa-angle-left"></i>
+              </section>
+              <section class="sidebar-dropdown">
+                <a href="">مقالات</a>
+                <a href="">پست ها</a>
+                <a href="">دوره ها</a>
+              </section>
+            </section>
+
+            <section class="sidebar-part-title">بخش کاربران</section>
+
+            <section class="sidebar-group-link">
+              <section class="sidebar-dropdown-toggle">
+                <i class="fas fa-users-bar"></i>
+                <span>کاربران</span>
+                <i class="fas fa-angle-left"></i>
+              </section>
+              <section class="sidebar-dropdown">
+                <a href="">ادمین</a>
+                <a href="">مدرس ها</a>
+                <a href="">دانشجو</a>
+              </section>
+            </section>
+
+            <section class="sidebar-part-title">بخش کاربران</section>
+
+            <section class="sidebar-group-link">
+              <section class="sidebar-dropdown-toggle">
+                <i class="fas fa-cogs"></i>
+                <span>تنظیمات منو</span>
+                <i class="fas fa-angle-left"></i>
+              </section>
+              <section class="sidebar-dropdown">
+                <a href="">منوی هدر</a>
+                <a href="">منوی فوتر</a>
+              </section>
+            </section>
+          </section>
+        </section>
+      </aside>
+
+      <section class="main-body"></section>
+    </section>
 
     <script src="assets/js/jquery-3.5.1.min.js"></script>
     <script src="assets/js/popper.js"></script>
