--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     </header>
 
     <section class="body-container">
-      <aside>
+      <aside class="sidebar">
         <section class="sidebar-container">
           <section class="sidebar-wrapper">
             <a href="#" class="sidebar-link">
