sidebar toggle hide/show

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <section
           class="d-flex justify-content-between flex-md-row-reverse px-2"
         >
-          <span class="d-inline d-md-none"
+          <span id="sidebar-toggle-show" class="d-inline d-md-none"
             ><i class="fas fa-toggle-off"></i
           ></span>
-          <span class="d-none d-md-inline"
+          <span id="sidebar-toggle-hide" class="d-none d-md-inline"
             ><i class="fas fa-toggle-on"></i
           ></span>
           <span><img class="logo" src="assets/images/logo.png" alt="" /></span>
@@ -325,7 +325,7 @@
     </header>
 
     <section class="body-container">
-      <aside class="sidebar">
+      <aside id="sidebar" class="sidebar">
         <section class="sidebar-container">
           <section class="sidebar-wrapper">
             <a href="#" class="sidebar-link">
@@ -385,7 +385,7 @@
         </section>
       </aside>
 
-      <section class="main-body">
+      <section id="main-body" class="main-body">
         <section class="row">
           <section class="col-lg-3 col-md-6 col-12">
             <a href="#" class="text-decoration-none d-block mb-4">
