fix bug - finish project

--- a/index.html
+++ b/index.html
@@ -354,9 +354,9 @@
                 <i class="fas fa-angle-left angle"></i>
               </section>
               <section class="sidebar-dropdown">
-                <a href="">مقالات</a>
-                <a href="">پست ها</a>
-                <a href="">دوره ها</a>
+                <a href="#">مقالات</a>
+                <a href="#">پست ها</a>
+                <a href="#">دوره ها</a>
               </section>
             </section>
 
@@ -369,9 +369,9 @@
                 <i class="fas fa-angle-left angle"></i>
               </section>
               <section class="sidebar-dropdown">
-                <a href="">ادمین</a>
-                <a href="">مدرس ها</a>
-                <a href="">دانشجو</a>
+                <a href="#">ادمین</a>
+                <a href="#">مدرس ها</a>
+                <a href="#">دانشجو </a>
               </section>
             </section>
 
@@ -384,8 +384,8 @@
                 <i class="fas fa-angle-left angle"></i>
               </section>
               <section class="sidebar-dropdown">
-                <a href="">منوی هدر</a>
-                <a href="">منوی فوتر</a>
+                <a href="#">منوی هدر</a>
+                <a href="#">منوی فوتر</a>
               </section>
             </section>
           </section>
